Fix improper CSS on header if user had light mode
If the user's PC had light mode enabled, the text in the header would be too dark to read, this fixes it by manually setting the colour of the header to stay white, while letting the other text change colour

--- a/Wuikinuxv Learning App/src/assets/Components/Header.css
+++ b/Wuikinuxv Learning App/src/assets/Components/Header.css
@@ -19,3 +19,8 @@ header nav img{
   width: 50px;
   height: 50px;
 }
+@media (prefers-color-scheme: light) {
+    header{
+        color: #E0E0E0;
+    }
+}
